用户管理功能实现

--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -255,7 +255,7 @@ desired effect
                                 <p>
                                     {{ USERNAME }}
                                     {% if Perm == 1 %}
-                                        <a href="#" style="margin-top:0.2em; display: block;font-size: 0.7em;color: white;">管理员权限</a>
+                                        <a target="_blank" href="http://127.0.0.1:8000/accounts/manageUser" style="margin-top:0.2em; display: block;font-size: 0.7em;color: white;">管理员权限</a>
                                     {% else %}
                                         <small>普通用户</small>
                                     {% endif %}
