--- a/OpsManage/static/css/form2.css
+++ b/OpsManage/static/css/form2.css
@@ -19,7 +19,7 @@ h2{font-weight:100;font-size:20px;text-align:center;color:#969696;margin-top:10p
 html[xmlns] .clearfix{display:block;}
 * html .clearfix{height:1%;}
 .contact label{line-height:30px;}
-.contact input[type="text"],.contact input[type="date"],.contact select{
+.contact input[type="text"],.contact input[type="date"],.contact select,.contact input[type="password"]{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
