--- a/OpsManage/templates/accounts/manageUser.html
+++ b/OpsManage/templates/accounts/manageUser.html
@@ -1,113 +1,156 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-        {% include 'link_css.html' %}
-        <script type="text/javascript" src="{% static 'js/jquery.min.js'%}"></script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="/static/bower_components/font-awesome/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="/static/bower_components/Ionicons/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/static/dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+         folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="/static/dist/css/skins/_all-skins.min.css">
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="/static/bower_components/morris.js/morris.css">
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="/static/bower_components/jvectormap/jquery-jvectormap.css">
+    <!-- Date Picker -->
+    <link rel="stylesheet" href="/static/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="/static/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="/static/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
-         <script>
-            //定义函数myClose关闭当前窗口
-            function myClose(){
-                //将id为time的元素的内容转为整数，保存在变量n中
-                var n=parseInt(time.innerHTML);
-                n--;//将n-1
-                //如果n==0,关闭页面
-                //否则, 将n+秒钟后自动关闭，再保存回time的内容中
-                if(n>0){
-                    time.innerHTML=n+"秒钟后自动关闭";
-                    timer=setTimeout(myClose,1000);
-                }else{
-                    close();
-                }
-            }
-            var timer=null;
-            //当页面加载后，启动周期性定时器，每个1秒执行myClose
-            window.onload=function(){
-                timer=setTimeout(myClose,1000);
-            }
-         </script>
-	</head>
-	<body>
+    <link rel="stylesheet" href="{% static 'css/cmdb/ServerManage/topFunc.css'%}">
 
-        {% include 'main-header.html' %}
+{#    <link rel="stylesheet" href="{% static 'css/cmdb/ServerManage/form.css'%}">#}
+        <link href="/static/css/form2.css" rel="stylesheet" type="text/css">
+        <style>
+        body{font-family:'Open Sans',sans-serif;padding:20px;margin:0;background:url(/static/img/bg.png);}
+        .container{padding:60px;margin:30px auto;background:#fff;border:1px solid #ccc;width:70%;}
+        .container2{padding:30px;margin:30px auto;background:#fff;border:1px solid #ccc;width:70%;}
+    </style>
+    <script src="/static/js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <!--Framework-->
+    <script src="/static/js/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery-ui.js" type="text/javascript"></script>
+    <!--End Framework-->
+     <script src="/static/js/jquery.ffform.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#form').ffform({ animation: 'flip', submitButton: '#submit', validationIndicator: '#validation', errorIndicator: '#error', successIndicator: '#success', 'fields': [{ 'id': 'name', required: true, requiredMsg: 'Name is required', type: 'alpha', validate: true, msg: 'Invalid Name' }, { 'id': 'email', required: true, requiredMsg: 'E-Mail is required', type: 'email', validate: true, msg: 'Invalid E-Mail Address' }, { 'id': 'phone', required: false, type: 'custom', validate: false, msg: 'Invalid Phone #' }, { 'id': 'message', required: false, type: 'text', validate: false, msg: ''}] });
+        });
+    </script>
+    <script>
+    //定义函数myClose关闭当前窗口
+    function myClose(){
+        //将id为time的元素的内容转为整数，保存在变量n中
+        var n=parseInt(time.innerHTML);
+        n--;//将n-1
+        //如果n==0,关闭页面
+        //否则, 将n+秒钟后自动关闭，再保存回time的内容中
+        if(n>0){
+            time.innerHTML=n+"秒钟后自动关闭";
+            timer=setTimeout(myClose,1000);
+        }else{
+            close();
+        }
+    }
+    var timer=null;
+    //当页面加载后，启动周期性定时器，每个1秒执行myClose
+    window.onload=function(){
+        timer=setTimeout(myClose,1000);
+    }
+    </script>
 
-        {% include 'main-sidebar.html' %}
+</head>
+<body>
 
-		<div id="content-wrapper">
-            <section id="content">
-                <h2>用户管理</h2>
-
-                <form method='post' action="addAdminSubmit">
-
-                    <table>
-                        <tr>
-                            <td>用户名：</td>
-                            <td><input type="text" name="username"></td>
-                        </tr>
-                         <tr>
-                            <td>邮箱：</td>
-                            <td><input type="text" name="email"></td>
-                        </tr>
-                        <tr>
-                            <td>密码：</td>
-                            <td><input type="text" name="password"></td>
-                        </tr>
-                        <tr>
-                            <td>用户权限：</td>
-                            <td>
-                                <select name="perm" >
-                                <option value="0">普通用户</option>
-                                <option value="1">管理员</option>
-                            </select></td>
-                        </tr>
-                    </table>
-                    <input class="butn" type="submit" value="注册新用户" >
-
-                </form>
-                <div style="border-bottom: rgba(127,176,255,0.48) 1px solid;height:15px; margin: 10px 0"></div>
-                <div style="margin-top: 20px">
-                    <form method="post" action="http://127.0.0.1:8000/accounts/manageUser">
-                        <table class="gridtable">
-                            <tr>
-                                <th>选择</th>
-                                <th>序号</th>
-                                <th>用户名</th>
-                                <th>邮箱</th>
-                                <th>管理员</th>
-                            </tr>
-                            {% for i in admin %}
-                            <tr>
-                                <th><input type="checkbox" name="delete_admin" value="{{ i.pk }}"></th>
-                                <th>{{ i.pk }}</th>
-                                <th>{{ i.username}}</th>
-                                <th>{{ i.email}}</th>
-                                <th>{{ i.is_superuser}}</th>
-                            </tr>
-                            {% endfor %}
-
-                        </table>
-                        <input class="butn" type="submit" value="删除">
-                    </form>
-                </div>
-
-                <div style="border-bottom: rgba(127,176,255,0.48) 1px solid;height:15px; margin: 10px 0"></div>
-
-
-                <div style="margin: 20px">
-                    <a id="closeWindow" href="editAdminBack">完成编辑，点此退出</a>
-                </div>
-
-
-
-             </section>
+<section id="getintouch" class="rotateInUpLeft animated">
+        <div class="container2" style="border-bottom: 0;">
+            <h1>
+                <span>用户管理</span>
+            </h1>
         </div>
 
+        <div class="container">
+            <form method="post" action="http://127.0.0.1:8000/accounts/manageUser">
+                <table class="table table-bordered table-hover" style="font-size: 0.9em;">
+                    <thead>
+                    <tr>
+                        <th class="text-center">选择</th>
+                        <th class="text-center">序号</th>
+                        <th class="text-center">用户名</th>
+                        <th class="text-center">邮箱</th>
+                        <th class="text-center">管理员</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for i in admin %}
+                        <tr>
+                            <td class="text-center"><input type="checkbox" name="delete_admin" value="{{ i.pk }}"></td>
+                            <td class="text-center">{{ i.pk }}</td>
+                            <td class="text-center">{{ i.username }}</td>
+                            <td class="text-center">{{ i.email}}</td>
+                            <td class="text-left">{{ i.is_superuser }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <div class="row  clearfix">
+                    <div class="span10 offset2" style="width: 100%">
+                        <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class=" btn btn-block btn-danger " value="删除">
+                    </div>
+                </div>
+            </form>
+            <hr>
+            <form class="contact" action="addAdminSubmit" method="post" id="form" style="padding: 30px;margin:0 auto;">
+                <div class="row clearfix">
+                    <div class="ctrl" style="width: 60%;margin:0 auto;">
+                        <label>用户名</label>
+                        <input style="width: 66%;margin-left: 3em" type="text" name="username" placeholder="请输入用户名">
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="ctrl"  style="width: 60%;margin:0 auto;">
+                        <label>邮箱地址</label>
+                        <input style="width: 66%;margin-left: 2em" type="text" name="email" placeholder="请输入邮箱地址">
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="ctrl"  style="width: 60%;margin:0 auto;">
+                        <label>账户密码</label>
+                        <input style="width: 66%;margin-left: 2em" type="password" name="password" placeholder="请设置密码">
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="ctrl"  style="width: 60%;margin:0 auto;" >
+                        <label>用户权限</label>
+                        <select style="width: 66%;margin-left: 2em" name="perm" >
+                            <option value="0">普通用户</option>
+                            <option value="1">管理员</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row  clearfix">
+                    <div class="span10 offset2" style="width: 100%">
+                        <input style="width: 80px;height: 40px;margin:0 auto;margin-top:20px;" type="submit"  class="submit btn btn-block btn-success " value="添加">
+                    </div>
+                </div>
+                <div style="width:200px;margin:80px auto;text-align: center;font-size: 1.2em;">
+                    <a style="color:#666666;" href="javascript:window.opener=null;window.open('','_self');window.close();">完成编辑，点此退出</a>
+                    <i class="fa fa-fw fa-hand-o-left"></i>
+                </div>
+            </form>
+        </div>
+    </section>
 
-        <footer id="footer"></footer>
-
-    </body>
+</body>
 </html>
-
