备份自己的

--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -345,7 +345,7 @@ desired effect
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="http://127.0.0.1:8000/cmdb"><i class="fa fa-circle-o"></i> 资产列表</a></li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> 基础数据</a></li>
+                        <li><a href="http://127.0.0.1:8000/cmdb/basicData"><i class="fa fa-circle-o"></i> 基础数据</a></li>
                         <li><a href="#"><i class="fa fa-circle-o"></i> 事件日志</a></li>
                         <li><a href="#"><i class="fa fa-circle-o"></i> 资产流程</a></li>
                     </ul>
