--- a/OpsManage/templates/cmdb/basicData/cabDetail.html
+++ b/OpsManage/templates/cmdb/basicData/cabDetail.html
@@ -2,40 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ IDC }}_机柜图</title>
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 </head>
 <body>
-    <div style="width: 300px;border:1px solid #0a0a0a;margin: 20px auto;padding: 20px;position: absolute;">
-        {% for i in cabSpaces %}
-            {% if i.asset %}
-                <div style="border:1px solid #aaaaaa; height:20px;width:100%;margin:0 auto;text-align: center">
-                    <span style="float: left">{{ i.get_cabinet_location_display}}</span>
-                    <span style="margin-left: 2em">{{ i.asset.asset_name }}</span>
-                </div>
-            {% else %}
-                <div style="border:1px solid #aaaaaa;height:20px;width:100%;margin:0 auto;">
-                    <span style="color: #aaaaaa">{{ i.get_cabinet_location_display}}</span>
-                </div>
-            {% endif %}
-        {% endfor %}
-        {% for a in Assets %}
-            {% if a.height == 1 %}
-                <div style="border:1px solid #0a0a0a;background:#EEEEEE;height:20px;line-height:20px;width:100%;margin:0 auto;text-align: center;">
-                    <a href="">{{ a.asset_name }}</a></div>
-            {% elif a.height == 2 %}
-                <div style="position:absolute;left:0;top:0;border:1px solid #0a0a0a;background:#EEEEEE;height:40px;line-height:40px;width:300px;margin:0 auto;text-align: center;">
-                    <a href="">{{ a.asset_name }}</a></div>
-            {% elif a.height == 3 %}
-                <div style="border:1px solid #0a0a0a;background:#EEEEEE;height:60px;line-height:60px;width:100%;margin:0 auto;text-align: center;">
-                    <a href="">{{ a.asset_name }}</a></div>
-            {% elif a.height == 4 %}
-                <div style="border:1px solid #0a0a0a;background:#EEEEEE;height:80px;line-height:80px;width:100%;margin:0 auto;text-align: center;">
-                    <a href="">{{ a.asset_name }}</a></div>
-            {% else%}
-                <div style="border:1px solid #0a0a0a;background:#EEEEEE;height:100px;line-height:100px;width:100%;margin:0 auto;text-align: center;">
-                    <a href="">{{ a.asset_name }}</a></div>
-            {% endif %}
-        {% endfor %}
-    </div>
+    {% for CAB in CABS %}
+        <div class="cab" style="float: left;margin-bottom: 1em;">
+            <div style="font-size:1.2em;text-align: center;width: 260px;margin: 1em 1em 0">{{ CAB.cabinet_name }}</div>
+            <div id="{{ CAB.id }}" style="width: 220px;border:2px solid #0a0a0a;margin: 1em 1em 2em;padding: 20px;position: relative">
+            <script>
+                $(function(){
+                    for(i=0;i<{{ CAB.cabinet_height }};i++) {
+                        $('#{{ CAB.id }}').append("<div style=\"border:1px solid #aaaaaa;height:20px;width:100%;margin:0 auto;\"></div>");
+                    }
+                })
+            </script>
+                {% for a in ASSETS %}
+                    {% if a.cabinet == CAB %}
+                        {% if a.height == 1 %}
+                        <div style="width:220px;position:absolute;left:20px;top:{{ a.cab_location }}px;border:1px solid #0a0a0a;background:#EEEEEE;height:20px;line-height:20px;;margin:0 auto;text-align: center;">
+                            <a href="">{{ a.asset_name }}</a></div>
+                    {% elif a.height == 2 %}
+                        <div style="width:220px;position:absolute;left:20px;top:{{ a.cab_location }}px;border:1px solid #0a0a0a;background:#EEEEEE;height:42px;line-height:40px;margin:0 auto;text-align: center;">
+                            <a href="">{{ a.asset_name }}</a></div>
+                    {% elif a.height == 3 %}
+                        <div  style="width:220px;position:absolute;left:20px;top:{{ a.cab_location }}px;border:1px solid #0a0a0a;background:#EEEEEE;height:64px;line-height:60px;margin:0 auto;text-align: center;">
+                            <a href="">{{ a.asset_name }}</a></div>
+                    {% elif a.height == 4 %}
+                        <div style="width:220px;position:absolute;left:20px;top:{{ a.cab_location }}px;border:1px solid #0a0a0a;background:#EEEEEE;height:86px;line-height:80px;;margin:0 auto;text-align: center;">
+                            <a href="">{{ a.asset_name }}</a></div>
+                    {% else%}
+                        <div style="width:220px;position:absolute;left:20px;top:{{ a.cab_location }}px;border:1px solid #0a0a0a;background:#EEEEEE;height:108px;line-height:100px;margin:0 auto;text-align: center;">
+                            <a href="">{{ a.asset_name }}</a></div>
+                    {% endif %}
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    {% endfor %}
 </body>
 </html>
