--- a/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
+++ b/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
@@ -84,9 +84,10 @@
                 </div>
                 <div class="ctrl">
                     <select  name="network_location" >
-                        {% if ASSET.networkk_location %}
+                        {% if ASSET.network_location %}
                             <option value="{{ ASSET.network_location }}" selected="selected">{{ ASSET.get_network_location_display }}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择所属网络</option>
                         {% endif %}
                         <option value="1">控制专网</option>
@@ -115,9 +116,11 @@
                     <select  id="o" name="organization">
                         {% if ASSET.organization %}
                             <option value="{{ ASSET.organization.id }}" selected="selected">{{ ASSET.organization.org_name }}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择单位</option>
                         {% endif %}
+
                         {% for Organization in Organizations %}
                             <option value={{ Organization.id }}>{{ Organization.org_name }}</option>
                         {% endfor %}
@@ -129,7 +132,8 @@
                     <select   id="i" name="idc" onchange="var args = $('#i').serialize();var x1 = '{%url 'cmdb:showCabs'%}?' + args;$('#cab').load(x1 + ' #cab')">
                         {% if ASSET.idc %}
                             <option value="{{ ASSET.idc.id }}" selected="selected">{{ ASSET.idc.idc_name }}</option>
-                            {% else %}
+                            <option value=""0>无</option>
+                        {% else %}
                             <option value=""0>请选择机房</option>
                         {% endif %}
                         {% for Idc in Idcs %}
@@ -143,7 +147,8 @@
                     <select id="c" name="cab">
                         {% if ASSET.cabinet %}
                             <option value="{{ ASSET.cabinet.id }}" selected="selected">{{ ASSET.cabinet.cabinet_name }}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择机柜</option>
                         {% endif %}
                         {% for Cab in Cabs %}
@@ -181,9 +186,11 @@
                     <select  name="status" >
                         {% if ASSET.status %}
                             <option value="{{ ASSET.status }}" selected="selected">{{ ASSET.get_status_display }}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择设备状态</option>
                         {% endif %}
+
                         <option value="1">使用中</option>
                         <option value="2">未使用</option>
                         <option value="3">故障</option>
@@ -200,9 +207,11 @@
                     <select  name="contract" >
                         {% if ASSET.contract %}
                             <option value="{{ ASSET.contract.id }}" selected="selected">{{ ASSET.contract}}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择合同</option>
                         {% endif %}
+
                         {% for Contract in Contracts %}
                             <option value={{ Contract.id}}>{{ Contract.contract_name }}</option>
                         {% endfor %}
@@ -218,8 +227,9 @@
                     <select  name="admin">
                         {% if ASSET.admin %}
                             <option value="{{ ASSET.admin.id }}" selected="selected">{{ ASSET.admin}}</option>
-                            {% else %}
-                                <option value="0">请选择管理员</option>
+                            <option value="0">无</option>
+                        {% else %}
+                            <option value="0">请选择管理员</option>
                         {% endif %}
                         {% for User in Users %}
                             <option value={{ User.id}}>{{ User.username }}</option>
@@ -241,7 +251,8 @@
                     <select  name="supplier" >
                         {% if ASSET.supplier %}
                             <option value="{{ ASSET.supplier.id }}" selected="selected">{{ ASSET.supplier}}</option>
-                            {% else %}
+                            <option value="0">无</option>
+                        {% else %}
                             <option value="0">请选择供应商</option>
                         {% endif %}
                         {% for Supplier in Suppliers %}
@@ -280,9 +291,11 @@
                     <select  name="approved_by" >
                         {% if ASSET.approved_by %}
                             <option value="{{ ASSET.approved_by.id }}" selected="selected">{{ ASSET.approved_by}}</option>
-                            {% else %}
-                                <option value="0">请选择审批人</option>
+                            <option value="0">无</option>
+                        {% else %}
+                            <option value="0">请选择审批人</option>
                         {% endif %}
+
                         {% for User in Users %}
                             <option value={{ User.id}}>{{ User.username }}</option>
                         {% endfor %}
@@ -309,7 +322,8 @@
                         <select  name="sub_asset_type" >
                             {% if ASSET.server.sub_asset_type %}
                                 <option value="{{ ASSET.server.sub_asset_type }}">{{ ASSET.server.get_sub_asset_type_display }}</option>
-                                {% else %}
+                                <option value="0">无</option>
+                            {% else %}
                                 <option value="0">请选择服务器类型</option>
                             {% endif %}
                             <option value="1">PC服务器</option>
@@ -355,9 +369,11 @@
                         <select  required name="os_type" style="float: left;">
                             {% if ASSET.server.os_type %}
                                 <option  value="{{ ASSET.server.os_type }}">{{ ASSET.server.get_os_type_display }}</option>
-                                {% else %}
+                                <option value="0">无</option>
+                            {% else %}
                                 <option value="0">请选择操作系统</option>
                             {% endif %}
+
                             <option value="1">Windows</option>
                             <option value="2">Unix</option>
                             <option value="3">Linux</option>
@@ -396,7 +412,8 @@
                          <select name="sub_asset_type">
                              {% if ASSET.networkdevice.sub_asset_type %}
                                  <option value="{{ ASSET.networkdevice.sub_asset_type }}">{{ ASSET.networkdevice.get_sub_asset_type_display }}</option>
-                                 {% else %}
+                                 <option value="0">无</option>
+                             {% else %}
                                  <option value="0">请选择网络设备类型</option>
                              {% endif %}
                              <option value="1">路由器</option>
@@ -419,7 +436,8 @@
                          <select name="sub_asset_type">
                              {% if ASSET.securitydevice %}
                                  <option value="{{ ASSET.securitydevice.sub_asset_type }}">{{ ASSET.securitydevice.get_sub_asset_type_display }}</option>
-                                 {% else %}
+                                <option value="0">无</option>
+                             {% else %}
                                     <option value="0">请选择安全设备类型</option>
                              {% endif %}
                              <option value="1">防火墙</option>
@@ -458,7 +476,8 @@
                          <select name="sub_asset_type">
                              {% if ASSET.storagedevice.sub_asset_type %}
                                  <option value="{{ ASSET.storagedevice.sub_asset_type }}">{{ ASSET.storagedevice.get_sub_asset_type_display }}</option>
-                                 {% else %}
+                                <option value="0">无</option>
+                             {% else %}
                                     <option value="0">请选择存储设备类型</option>
                              {% endif %}
                              <option value="1">磁盘阵列</option>
