--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -31,12 +31,8 @@
     <!-- Google Font -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-<<<<<<< HEAD
-
-=======
     <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js" ></script>
     <script type="text/javascript" src="/static/dist/layer/layer.js"></script>
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
     {% block css_block %} {% endblock %}
 
 </head>
@@ -96,18 +92,13 @@ desired effect
                             <!-- The user image in the navbar-->
                             <img src="/static/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                             <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                            <span class="hidden-xs">Alexander Pierce</span>
+                            <span class="hidden-xs">{{ USERNAME }}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- The user image in the menu -->
                             <li class="user-header">
                                 <img src="/static/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
-<<<<<<< HEAD
-                                <p>
-                                    Alexander Pierce - Web Developer
-                                    <small>Member since Nov. 2012</small>
-=======
                                  <p>
                                     {{ USERNAME }}
                                     {% if Perm == 1 %}
@@ -115,41 +106,38 @@ desired effect
                                     {% else %}
                                         <small>普通用户</small>
                                     {% endif %}
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
                                 </p>
                             </li>
-
                             <!-- Menu Body -->
-                            <li class="user-body">
-                                <div class="row">
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Followers</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Sales</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Friends</a>
-                                    </div>
-                                </div>
-                                <!-- /.row -->
-                            </li>
+{#                            <li class="user-body">#}
+{#                                <div class="row">#}
+{#                                    <div class="col-xs-4 text-center">#}
+{#                                        <a href="#">Followers</a>#}
+{#                                    </div>#}
+{#                                    <div class="col-xs-4 text-center">#}
+{#                                        <a href="#">Sales</a>#}
+{#                                    </div>#}
+{#                                    <div class="col-xs-6 text-center">#}
+{#                                        <a href="#">管理员权限</a>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                                <!-- /.row -->#}
+{#                            </li>#}
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-<<<<<<< HEAD
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
-=======
                                     <a class="btn btn-default btn-flat cd-signin" onclick=" layer.open({type: 2,closeBtn: 1,area: ['600px', '600px'],shadeClose: true, content: ['/accounts/editAdmin'],});">修改密码</a>
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
                                 </div>
                                 <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                    <a href="http://127.0.0.1:8000/logout" class="btn btn-default btn-flat">注销登录</a>
                                 </div>
                             </li>
                         </ul>
                     </li>
-
+                    <!-- Control Sidebar Toggle Button -->
+                    <li>
+                        <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -172,11 +160,7 @@ desired effect
 
                 <!-- 资产管理  -->
                 <li class="treeview">
-<<<<<<< HEAD
-                    <a href="/cmdb/asset/">
-=======
                     <a href="/cmdb/">
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
                         <i class="fa fa-cubes"></i>
                         <span>资产管理</span>
                         <i class="fa fa-angle-left pull-right"></i>
@@ -266,18 +250,6 @@ desired effect
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         {% block pageheader %}
-<<<<<<< HEAD
-        <section class="content-header">
-            <h1>
-                Page Header
-                <small>Optional description</small>
-            </h1>
-            <ol class="breadcrumb">
-                <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-                <li class="active">Here</li>
-            </ol>
-        </section>
-=======
 {#        <section class="content-header">#}
 {#            <h1>#}
 {#                Page Header#}
@@ -288,7 +260,6 @@ desired effect
 {#                <li class="active">Here</li>#}
 {#            </ol>#}
 {#        </section>#}
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
         {% endblock pageheader %}
 
         <!-- Main content -->
@@ -345,10 +316,6 @@ desired effect
 <script type="text/javascript" src="/static/dist/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <!-- AdminLTE App -->
 <script type="text/javascript" src="/static/dist/js/adminlte.min.js"></script>
-<<<<<<< HEAD
-<script type="text/javascript" src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>
-=======
->>>>>>> 342a308b5056210cb6149090e3a26a8e3c3fa9b7
 
 <script>
     $.widget.bridge('uibutton', $.ui.button);
