--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -167,7 +167,7 @@ desired effect
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="/cmdb/asset/"><i class="fa fa-circle-o"></i> 资产列表</a></li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> 资产地图</a></li>
+                        <li><a href="/cmdb/assetMap/"><i class="fa fa-circle-o"></i> 资产地图</a></li>
                         <li><a href="#"><i class="fa fa-circle-o"></i> 资产流程</a></li>
                         <li><a href="/cmdb/basicData/"><i class="fa fa-circle-o"></i> 基础数据</a></li>
                     </ul>
