--- a/OpsManage/templates/cmdb/basicData/cabDetail.html
+++ b/OpsManage/templates/cmdb/basicData/cabDetail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ IDC }}_机柜图</title>
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-     <script src="/static/plugins/layer/layer.js"></script>
+    <script type="text/javascript" src="/static/dist/layer/layer.js"></script>
     <script>
         function detail(n) {
             layer.open({
